--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,11 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/_redirects",
               {
                 "glob": "**/*",
                 "input": "public"
+                
               }
             ],
             "styles": [
